--- a/app/templates/category/index.html.twig
+++ b/app/templates/category/index.html.twig
@@ -39,6 +39,16 @@
                         .show'|trans }}">
                             {{ 'action.show'|trans }}
                         </a>
+
+                        <a href="{{ url('category_edit', {id: category.id}) }}" title="{{ 'action
+                        .show'|trans }}">
+                            {{ 'action.edit'|trans }}
+                        </a>
+
+                        <a href="{{ url('category_delete', {id: category.id}) }}" title="{{ 'action
+                        .show'|trans }}">
+                            {{ 'action.delete'|trans }}
+                        </a>
                     </td>
                 </tr>
             {% endfor %}
@@ -48,6 +58,10 @@
         <div class="navigation text-center">
             {{ knp_pagination_render(pagination) }}
         </div>
+
+        <a href="{{ url('category_create') }}" class="btn btn-link">
+            {{ 'action.create'|trans }}
+        </a>
 
     {% else %}
         <p>
