changed category display and added missing translations

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -41,6 +41,12 @@
         {% block body %}{% endblock %}
     </div>
 </main>
+
+<footer class="bg-dark text-white py-3">
+    <div class="container text-center">
+        <p>&copy; 2024 My Movie Blog. All rights reserved.</p>
+    </div>
+</footer>
 {% block javascripts %}
     {# {% block importmap %}{{ importmap('app') }}{% endblock %}#}
     <script
