--- a/app/templates/category/main.html.twig
+++ b/app/templates/category/main.html.twig
@@ -26,6 +26,16 @@
                                 }}">
                                     {{ 'action.show'|trans }}
                                 </a>
+
+                                <a href="{{ url('category_edit', {id: category.id}) }}" title="{{ 'action
+                        .show'|trans }}">
+                                    {{ 'action.edit'|trans }}
+                                </a>
+
+                                <a href="{{ url('category_delete', {id: category.id}) }}" title="{{ 'action
+                        .show'|trans }}">
+                                    {{ 'action.delete'|trans }}
+                                </a>
                             </div>
                         </div>
                     </div>
