--- a/app/templates/task/main.html.twig
+++ b/app/templates/task/main.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1 class="text-center">{{ 'title.task_list'|trans }}</h1>
+    <h1 class="text-center">{{ 'title.post_list'|trans }}</h1>
     {% if pagination is defined and pagination.items|length %}
 
         <div class="navigation text-center">
@@ -17,7 +17,11 @@
                 {% for task in pagination.items %}
                     <div class="col-md-4 mb-4">
                         <div class="card h-100">
-                            <img src="#" class="card-img-top" alt="{{ task.title }}">
+                            {% if task.thumbnail %}
+                                <img src="{{ asset('uploads/thumbnails/' ~ task.thumbnail.filename) }}" alt="Thumbnail">
+                            {% else %}
+                                <p>No thumbnail available.</p>
+                            {% endif %}
                             <div class="card-body">
                                 <h5 class="card-title">{{ task.title }}</h5>
                                 <p class="card-text">{{ task.title }}</p>
