--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -16,7 +16,7 @@
 <header class="bg-dark text-white py-3">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="{{ path('task_index') }}">My Movie Blog</a>
+            <a class="navbar-brand" href="{{ path('task_index') }}">My Blog</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,7 +34,7 @@
                         <li class="nav-item">
                             <div>{{ app.user.email }}</div>
                             <div>
-                                <a href="{{ url('app_logout') }}">{{ 'action_logout'|trans }}</a>
+                                <a href="{{ url('app_logout') }}">{{ 'action.logout'|trans }}</a>
                             </div>
                         </li>
                     {% else %}
@@ -59,7 +59,7 @@
 
 <footer class="bg-dark text-white py-3">
     <div class="container text-center">
-        <p>&copy; 2024 My Movie Blog. All rights reserved.</p>
+        <p>&copy; 2024 My Blog. All rights reserved.</p>
     </div>
 </footer>
 {% block javascripts %}
