--- a/app/templates/security/login.html.twig
+++ b/app/templates/security/login.html.twig
@@ -27,5 +27,9 @@
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
+
+    <a href="{{ url('app_register') }}" class="btn btn-lg btn-primary" type="submit">
+        Register
+    </a>
 </form>
 {% endblock %}
