--- a/app/templates/comment/delete.html.twig
+++ b/app/templates/comment/delete.html.twig
@@ -2,5 +2,5 @@
     page_title: 'title.comment_delete'|trans({'%id%': comment.id|default('')}),
     form: form,
     submit_label: 'action.delete'|trans,
-    back_to_list_path: 'task_show',
+    back_to_list_path: 'task_index',
 } %}
