--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -36,6 +36,12 @@
                     </li>
                     {% endif %}
 
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li>
+                            <a class="nav-link" href="{{ path('admin_index') }}">{{ 'label.admin_panel'|trans }}</a>
+                        </li>
+                    {% endif %}
+
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                         <li class="nav-item">
                             <div>{{ app.user.email }}</div>
