--- a/app/templates/admin/index.html.twig
+++ b/app/templates/admin/index.html.twig
@@ -5,23 +5,23 @@
 {% endblock %}
 
 {% block body %}
-        <h1 class="text-center mt-2">Admin Dashboard</h1>
+        <h1 class="text-center mt-2">{{ 'title.admin_dashboard'|trans }}</h1>
 
         <div class="container p-4 text-center">
             <div class="row">
                 <div class="col-md-4">
                     <a href="{{ path('admin_tasks') }}" class="btn btn-primary btn-lg">
-                        {{ 'label.manage_tasks'}}
+                        {{ 'label.manage_tasks'|trans}}
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="{{ path('admin_categories') }}" class="btn btn-primary btn-lg">
-                        {{ 'label.manage_categories'}}
+                        {{ 'label.manage_categories'|trans}}
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="{{ path('admin_users') }}" class="btn btn-primary btn-lg">
-                        {{ 'label.manage_users'}}
+                        {{ 'label.manage_users'|trans}}
                     </a>
                 </div>
             </div>
