--- a/app/templates/admin/tasks.html.twig
+++ b/app/templates/admin/tasks.html.twig
@@ -19,7 +19,7 @@
                 <th>{{ knp_pagination_sortable(pagination, 'label.created_at'|trans, 'task.createdAt') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label.updated_at'|trans, 'task.updatedAt') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label.title'|trans, 'task.title') }}</th>
-                <th>{{ 'label.category'|trans }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'label.category'|trans, 'task.category') }}</th>
                 <th>{{ 'label.actions'|trans }}</th>
             </tr>
             </thead>
@@ -31,15 +31,13 @@
                     <td>{{ task.updatedAt|format_date('long') }}</td>
                     <td>{{ task.title }}</td>
                     <td>
-                        <a href="{{ url('show_task_list', {categoryName: task.category.title}) }}" title="{{ 'action
-                        .show'|trans
+                        <a href="{{ url('show_task_list', {categoryName: task.category.title}) }}" title="{{ 'action.show'|trans
                         }}">
                             {{ task.category.title }}
                         </a>
                     </td>
                     <td>
-                        <a class="btn btn-primary" href="{{ url('task_show', {id: task.id}) }}" title="{{ 'action
-                        .show'|trans }}">
+                        <a class="btn btn-primary" href="{{ url('task_show', {id: task.id}) }}" title="{{ 'action.show'|trans }}">
                             {{ 'action.show'|trans }}
                         </a>
 
