--- a/app/templates/default/_form.html.twig
+++ b/app/templates/default/_form.html.twig
@@ -13,24 +13,28 @@ parameters:
 {% endblock %}
 
 {% block body %}
-    <h1>{{ page_title }}</h1>
-    {{ form_start(form) }}
-    {% if false == form.vars.valid %}
-        {% include 'default/_single_alert_message.html.twig' with {
-            type: 'danger',
-            message: 'message.form_error'|trans,
-        }%}
-    {% endif %}
-    {{ form_widget(form) }}
-    <div class="form-group row float-sm-right">
-        <input type="submit" value="{{ submit_label }}" class="btn btn-primary"/>
-    </div>
-    {% if back_to_list_path|default(false) %}
-        <div class="form-group row float-sm-left">
-            <a href="{{ url(back_to_list_path) }}" class="btn btn-link">
-                {{ 'action.back_to_list'|trans }}
-            </a>
+    <div class="mt-4 p-4">
+        <div class="text-center mb-4">
+            <h1>{{ page_title }}</h1>
         </div>
-    {% endif %}
-    {{ form_end(form) }}
+        {{ form_start(form) }}
+        {% if false == form.vars.valid %}
+            {% include 'default/_single_alert_message.html.twig' with {
+                type: 'danger',
+                message: 'message.form_error'|trans,
+            }%}
+        {% endif %}
+        {{ form_widget(form) }}
+        <div class="form-group row float-sm-right">
+            <input type="submit" value="{{ submit_label }}" class="btn btn-primary"/>
+        </div>
+        {% if back_to_list_path|default(false) %}
+            <div class="form-group row float-sm-left">
+                <a href="{{ url(back_to_list_path) }}" class="btn btn-link">
+                    {{ 'action.back_to_list'|trans }}
+                </a>
+            </div>
+        {% endif %}
+        {{ form_end(form) }}
+    </div>
 {% endblock %}
