--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -52,7 +52,7 @@
                     {% else %}
                         <li class="nav-item">
                             <div>
-                                <a href="{{ url('app_login') }}">{{ 'action_login'|trans }}</a>
+                                <a href="{{ url('app_login') }}">{{ 'action.login'|trans }}</a>
                             </div>
                         </li>
                     {% endif %}
@@ -71,7 +71,7 @@
 
 <footer class="bg-dark text-white py-3">
     <div class="container text-center">
-        <p>&copy; 2024 My Blog. All rights reserved.</p>
+        <p>&copy; {{ 'message.footer' }}</p>
     </div>
 </footer>
 {% block javascripts %}
