--- a/app/templates/security/login.html.twig
+++ b/app/templates/security/login.html.twig
@@ -14,7 +14,7 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">{{ 'title.sign_in' }}</h1>
+    <h1 class="h3 mb-3 font-weight-normal">{{ 'title.sign_in'|trans }}</h1>
     <label for="inputEmail">{{ 'label.email'|trans }}</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
     <label for="inputPassword">{{ 'label.password'|trans }}</label>
@@ -25,11 +25,11 @@
     >
 
     <button class="btn btn-lg btn-primary" type="submit">
-        {{ 'button.sign_in' }}
+        {{ 'button.sign_in'|trans }}
     </button>
 
     <a href="{{ url('app_register') }}" class="btn btn-lg btn-primary" type="submit">
-        {{ 'button.register' }}
+        {{ 'button.register'|trans }}
     </a>
 </form>
 {% endblock %}
