--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -71,7 +71,7 @@
 
 <footer class="bg-dark text-white py-3">
     <div class="container text-center">
-        <p>&copy; {{ 'message.footer' }}</p>
+        <p>&copy; {{ 'message.footer'|trans }}</p>
     </div>
 </footer>
 {% block javascripts %}
